src/main/components/builder_platform_interaction/container/container.css
/************* Place holder for Editor.html css *****************/
.THIS .slds-panel__header {
    border-bottom: none;
}

/************* Header *****************/
.THIS builder_platform_interaction-header .flow-builder-header-label {
    color: t(colorTextInverse);
}
/************* Toolbar *****************/
.THIS builder_platform_interaction-toolbar .toolbar {
    line-height: t(lineHeightTab);
}

/************* Left Panel *****************/
.THIS builder_platform_interaction-left-panel-resources .slds-button.slds-button_neutral {
    width: 100%;
}

.THIS builder_platform_interaction-left-panel builder_platform_interaction-tabset div.container {
    display: block;
    height: calc(100vh - 191px);
    -webkit-overflow-scrolling: touch;
    overflow:hidden;
    overflow-y:auto
}

/************* Canvas *****************/
.THIS builder_platform_interaction-canvas .canvas {
    background-color: t(colorForegroundPrimary);
    height: 100%;
    overflow: hidden;
    outline: none;
    user-select: none;
}

.THIS builder_platform_interaction-canvas .canvas .overlay {
    height: 100%;
    width: 100%;
    z-index: 404;
}

.THIS builder_platform_interaction-canvas .canvas .inner-canvas {
    height: 100%;
    width: 100%;
}

/************* Zoom Panel *****************/
.THIS builder_platform_interaction-zoom-panel .zoom-panel {
    bottom: t(spacingNone);
    right: t(spacingNone);
    z-index: 405;
}

.THIS builder_platform_interaction-zoom-panel .zoom-panel .slds-button .slds-button__icon.slds-button__icon_left {
    margin-right: t(spacingNone);
}

/************* Node *****************/
.THIS builder_platform_interaction-node .node-container {
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    transition: box-shadow 0.15s ease-in;
    z-index: 200;
}

.THIS builder_platform_interaction-node .node-container:active {
    z-index: 400;
}

.THIS builder_platform_interaction-node .targetHover .icon {
    transform: scale(1.05);
    box-shadow: 0 0 0 2px white, 0 0 0 3px t(colorBorderSelection), 0 0 6px 3px t(colorBorderSelection);
}

.THIS builder_platform_interaction-node .icon:hover {
    transform: scale(1.05);
}

.THIS builder_platform_interaction-node .icon:focus {
    outline: none;
}

.THIS builder_platform_interaction-node .icon-section.selected .icon {
    transform: scale(1.1);
    box-shadow: 0 0 0 2px white, 0 0 0 3px t(colorBorderSelection), 0 0 6px 3px t(colorBorderSelection);
}

.THIS builder_platform_interaction-node .icon {
    transition: transform 0.12s ease, box-shadow .1s ease-in;
    transform-origin: 50% 100%;
    padding: t(spacingNone);
    border: none;
    border-radius: t(borderRadiusMedium);
}

.THIS builder_platform_interaction-node .end-point {
    width: 20px;
    height: 20px;
    border-radius: 100%;
    border: t(borderWidthThick) solid white;
    box-shadow: inset 0px 0px 0px 2px t(colorBackgroundToggleHover);
    background-color: t(colorBackgroundButtonDefault);
    transition: box-shadow 0.1s ease, background-color 0.25s ease-out;
    top: 38px;
    left: 13px;
    z-index: 300;
}

.THIS builder_platform_interaction-node .end-point:hover {
    background-color: t(colorBackgroundAlt2);
    transform: scale(1.1);
}

.THIS builder_platform_interaction-node .end-point:active,.THIS builder_platform_interaction-node .end-point:focus {
    box-shadow: inset 0px 0px 0px 2px t(colorBrandDark), t(shadowButtonFocus);
    transform: scale(1.2);
}

.THIS builder_platform_interaction-node .end-point:focus {
    outline: none;
}

.THIS builder_platform_interaction-node .trash-can {
    top: -27px;
    left: 50px;
}

.THIS builder_platform_interaction-node .trash-can .slds-button.slds-button_icon-bare:active {
    outline: none;
    box-shadow: 0 0 3px #0070d2;
}

.THIS builder_platform_interaction-node .text-container {
    top: 57px;
    max-width: 132px;
}

.THIS builder_platform_interaction-node .text-container .text-label {
    font-weight: t(fontWeightBold);
    background-color: t(colorBackgroundBackdrop);
    padding: 0 3px;
}

.THIS builder_platform_interaction-node .text-container .text-description {
    background-color: t(colorBackgroundBackdrop);
    padding: 0 3px;
}

/************* Connector *****************/
.THIS builder_platform_interaction-canvas .canvas .jtk-connector {
    z-index: 100;
}

.THIS builder_platform_interaction-canvas .canvas .jtk-connector.jtk-hover {
    cursor: pointer;
}

.THIS builder_platform_interaction-canvas .canvas .jtk-connector.jtk-dragging {
    z-index: 401;
}

.THIS builder_platform_interaction-canvas .canvas .jtk-overlay {
    color: t(colorTextPrimary) !important;
    font-size: t(fontSizeTextXxSmall) !important;
    border: 1px solid #919297;
    background-color: white;
    text-transform: none;
    letter-spacing: normal;
    padding: 0.25rem 0.5rem;
    border-radius: 15rem;
    line-height: normal !important;
    vertical-align: bottom;
    white-space: nowrap;
    z-index: 199;
    max-width: 132px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.THIS builder_platform_interaction-canvas .canvas .jtk-overlay.jtk-hover {
    border-color: t(colorBrand);
    color: t(colorBrandDarker) !important;
    cursor: pointer;
}

.THIS builder_platform_interaction-canvas .canvas .jtk-overlay.label-selected {
    border-color: t(colorBrandDark);
    color: t(colorBrandDarker) !important;
    box-shadow: t(shadowButtonFocus);
    cursor: pointer;
}

.THIS builder_platform_interaction-canvas .canvas .jtk-overlay.fault-label {
    color: t(colorTextError) !important;
    border: 1px solid t(colorBorderDestructive);
}

.THIS builder_platform_interaction-canvas .canvas .jtk-overlay.jtk-hover.fault-label {
    border-color: t(colorBorderDestructiveHover);
    color: t(colorTextError) !important;
}

.THIS builder_platform_interaction-canvas .canvas .jtk-overlay.fault-label-selected {
    border-color: t(colorBorderDestructiveActive);
    color: t(colorTextError) !important;
    box-shadow: 0 0 3px t(colorBorderDestructiveActive);
    cursor: pointer;
}

.THIS builder_platform_interaction-canvas .canvas .jtk-endpoint.jtk-endpoint-anchor.jtk-draggable.jtk-endpoint-connected.jtk-dragging {
    width: 20px !important;
    height: 20px !important;
    border-radius: 100%;
    border: t(borderWidthThick) solid white;
    box-shadow: inset 0px 0px 0px 2px #919297, 0 2px 4px 0 rgba(0, 0, 0, 0.40);
    transform: scale(1.1);
    background-color: t(colorBackgroundAlt2);
    transition: box-shadow 0.1s ease, background-color 0.25s ease-out;
    z-index: 402;
}

